poke/testsuite/poke.pkl/map-diag-5.pk
/* { dg-do compile } */

any[][3] @ 0#B; /* { dg-error "" } */
